tests/test68.rael
routine(:123, 2323) {
    log :123
}